add meta, 3 March 2020

--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE HTML>
 <!--
-  Riverside by Li Riviere
-  Personal introduction page
-  Beta version on 31 March, 2020
+  html5 tag docs(https://developer.mozilla.org/zh-TW/docs/Web/HTML/Element)
 -->
 <html lang="en" dir="ltr">
 <head>
   <title>Riverside</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+		<meta name="author" content="Li Riviere"/>
+		<meta name="description" content="Personal introduction page, Beta version on 31 March 2020"/>
+
+		<link rel="shortcut icon" href="source/image/favicon.ico" type="image/x-icon">
+		<link rel="apple-touch-icon" href="favicon.png">
+		<link rel="stylesheet" href="source/css/main.css" media="screen and (min-width:1024px)"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 <body class="is-preload">
 
 	<!-- Nav -->
+	<nav id="navbar">
+		<ul>
+			<li class="resume">RESUME</li>
+			<li class="license">LICENSE</li>
+			<li class="thesis">THESIS</li>
+			<li class="project">PROJECT</li>
+		</ul>
+	</nav>
 
   <!-- Header -->
   <section id="header">
@@ -26,7 +38,7 @@
         <li><a href="#one" class="button primary scrolly">Begin</a></li>
       </ul>
     </div>
-  </section>
+	</section>
 
   <!-- One -->
   <section id="one" class="main special">
@@ -89,7 +101,6 @@
   </section>
 
   <!-- Four -->
-  <!--
     <section id="four" class="main">
       <div class="container">
         <div class="content">
@@ -407,7 +418,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
-		-->
 
   <!-- Footer -->
   <section id="footer">
