change link (resume to cv

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 <html lang="en" dir="ltr">
 <head>
   <title>Riverside</title>
-    <meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-		<meta name="author" content="Li Riviere"/>
-		<meta name="description" content="Personal introduction page, Beta version on 31 March 2020"/>
+  <meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+	<meta name="author" content="Li Riviere"/>
+	<meta name="description" content="Personal introduction page, Beta version on 31 March 2020"/>
 
-		<link rel="shortcut icon" href="source/image/favicon.ico" type="image/x-icon">
-		<link rel="apple-touch-icon" href="favicon.png">
-		<link rel="stylesheet" href="source/css/main.css" media="screen and (min-width:1024px)"/>
-    <link rel="stylesheet" href="assets/css/main.css"/>
+	<link rel="shortcut icon" href="source/image/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="favicon.png">
+	<link rel="stylesheet" href="source/css/main.css" media="screen and (min-width:1024px)"/>
+  <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 <body class="is-preload">
 
 	<!-- Nav -->
 	<nav id="navbar">
 		<ul>
-			<li class="resume">RESUME</li>
+			<li class="cv">CV</li>
 			<li class="license">LICENSE</li>
 			<li class="thesis">THESIS</li>
 			<li class="project">PROJECT</li>
