--- a/resume.html
+++ b/resume.html
@@ -4,19 +4,7 @@
   <meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   <title>Riviere's resume</title>
-<style>
-@media print{
-  @page{
-    size: A4 portrait;
-    margin: 0.5cm;
-    orphans:4;
-    widows:2;
-  }
-  body{
-    background-color: rgb(184, 165, 149);
-  }
-}
-</style>
+  <link rel="stylesheet" href="source/css/main.css"/>
 </head>
 <body>
   <img id="profile" src="source/image/background.jpg" width="320" alt="Riviere">
@@ -27,13 +15,20 @@
   <p id="phone">+886986135798</p>
   <p id="address">Taipei, Taiwan</p>
   <p id="website">https://sites.google.com/view/riverside-intro/</p>
+  <p id="title">Skills</p>
   <ul id="skill">
     <li>Develop and Evaluate Electronics</li>
     <li>Design Embedded Systems and IoTs</li>
     <li>Full Stack Application</li>
     <li>Signal analysis and Process</li>
     <li>Develop 3D model and Operate CNC machine</li>
+    <p>coding: VB, C/C++, JAVA; firmware: 8051, Arduino, ARM</p>
+    <p>PCB: PCB layout, PCB manufacturing process, cnc milling, UV mask & chemical milling, circuit repair</p>
+    <p>web design: HTML, CSS, Javascript; database: php, MySQL</p>
+    <p>management information system: hardware build & fix, peripheral; operating system: Windows, Linux, build servers</p>
+    <p>teaching subjects: programming, basic electricity, electronics, digital logic and project and competition</p>
   </ul>
+  <p id="title">Experience</p>
   <ul id="exerience">
     <li>
       <p id="time">Jul 2018-PRESENT</p>
@@ -51,15 +46,29 @@
       <p id="corp">Electronic Intern Teacher</p>
       <p id="comp">Yang Mei high school</p>
       <ul>
-        <li>Trained student and got 8th of national school skill competition of computer maintenance.</li>
-        <li></li>
+        <li>Trained student and got no.8 on 2016 semester of national school skill competition of computer maintenance.</li>
+        <li>Supported and join Wetland Conservation Class</li>
+        <li>Supported teach student to create Taiwan Pangolin cultural product</li>
       </ul>
+    </li>
+    <li>
+      <p id="time">Oct 2015-Jan 2016</p>
+      <p id="corp">Mathematic and Reading Teacher</p>
+      <p id="comp">BOYO Social Welfare Foundation</p>
+      <p>Teaching mathematic and reading to junior high school students.</p>
+    </li>
+    <li>
+      <p id="time">Oct 2012-Jun 2013</p>
+      <p id="corp">Volunteer of Counsel Centre</p>
+      <p id="comp">National Changhua University of Education</p>
+      <p>Lectures helping, Psychological test</p>
     </li>
     <li>
       <p id="time">Jul 2013-Aug 2013</p>
       <p id="Intern"></p>
     </li>
   </ul>
+  <p id="title">Education</p>
   <ul id="education">
     <li>
       <p id="time">Sep 2014-Jun 2016</p>
@@ -68,10 +77,51 @@
       <p id="university">National Changhua University of Education</p>
     </li>
     <li>
-      <p id="time"></p>
+      <p id="time">Feb 2015</p>
+      <p id="degree">Elementary Level</p>
+      <p id="university">Melbourne Impact English College</p>
+    </li>
+    <li>
+      <p id="time">Sep 2010-Jun 2014</p>
+      <p id="degree">Bachelor of Engineering</p>
+      <p id="department">Department of Industrial Education and Technology</p>
+      <p id="university">National Changhua University of Education</p>
+    </li>
+    <li>
+      <p id="time">Aug 2007-Jun 2010</p>
+      <p id="department">Computer Science Department</p>
+      <p id="university">Taoyuan Municipal Yang Mei Senior High School</p>
     </li>
   </ul>
+  <p id="award">Award</p>
+  <ul>
+    <li>
+      <p id="time">Oct 2014</p>
+      <p id="title">Bureau of Energy:太陽光電教案競賽</p>
+      <p>教案組:Solar bot</p>
+    </li>
+    <li>
+      <p id="time">Jul 2013</p>
+      <p id="title">第三屆東華盃太陽光電創意應用競賽佳作</p>
+      <p>Garden Mate:Solar powered lawn mower</p>
+    </li>
+    <li>
+      <p id="time">Dec 2009</p>
+      <p id="title">2009 Semester of National High School Skills Competition:Computer Maintenance 15th</p>
+    </li>
+  </ul>
+  <p id="title">Certifications</p>
+  <ul id="certifications">
+    <li>Computer Maintenance Class B</li>
+    <li>Web Design Class C</li>
+    <li>Industrial Electronic Class C</li>
+    <li>5 Teach licenses</li>
+  </ul>
 
+
+  <!-- github: river911009.github.io
+  easyeda:river801009
+  google: sites.google.com/view/riverside-intro/ -->
 
   <!-- https://novoresume.com/resume-templates -->
   <!-- 教育程度、工作經歷以及工作技能
