--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
 -->
 <html lang="en" dir="ltr">
 <head>
-  <title>Riverside</title>
   <meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-	<meta name="author" content="Li Riviere"/>
-	<meta name="description" content="Personal introduction page, Beta version on 31 March 2020"/>
+  <title>Riverside</title>
 
-	<link rel="shortcut icon" href="source/image/favicon.ico" type="image/x-icon">
-	<link rel="apple-touch-icon" href="favicon.png">
-	<link rel="stylesheet" href="source/css/main.css" media="screen and (min-width:1024px)"/>
+	<link rel="shortcut icon" href="source/image/favicon.ico" type="image/x-icon"/>
+	<link rel="apple-touch-icon" href="source/image/favicon_144x144.png"/>
+
+	<link rel="stylesheet" href="source/css/main.css"/>
+
   <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 <body class="is-preload">
 
+
+
 	<!-- Nav -->
 	<nav id="navbar">
 		<ul>
-			<li class="cv">CV</li>
+			<li class="about">ABOUT</li>
 			<li class="license">LICENSE</li>
 			<li class="thesis">THESIS</li>
 			<li class="project">PROJECT</li>
