14 April on ubuntu

--- a/resume.html
+++ b/resume.html
@@ -7,10 +7,39 @@
   <link rel="stylesheet" href="source/css/main.css"/>
 </head>
 <body>
-  <img id="profile" src="source/image/background.jpg" width="320" alt="Riviere">
-  <p id="name">Liao Jhih He</p>
-  <p id="corp">Information Technology Teacher</p>
-  <p id="about">Taught IT 2+ years and helped student won 8th of national school skill competition computer maintenance. Also design many embedded projects from hardware to software, and it needs full-stack web interface sometimes. As always, I'm staying in creating , learning and sharing knowledges.</p>
+  <div class="header">
+    <div class="profile">
+      <img src="source/image/background.jpg" alt="Riviere">
+    </div>
+    <div class="about">
+      <div class="name">
+        <p>Liao Jhih He</p>
+      </div>
+      <div class="corp">
+        <p>Information Technology Teacher</p>
+      </div>
+      <div class="intro">
+        <p>Taught IT 2+ years and helped student won 8th of national school skill competition computer maintenance. Also design many embedded projects from hardware to software, and it needs full-stack web interface sometimes. As always, I'm staying in creating , learning and sharing knowledges.</p>
+      </div>
+    </div>
+  </div>
+  <div class="contact">
+
+  </div>
+  <div class="skill">
+
+  </div>
+  <div class="experience">
+
+  </div>
+  <div class="education">
+
+  </div>
+
+
+
+
+
   <p id="email">m0331005@gm.ncue.edu.tw</p>
   <p id="phone">+886986135798</p>
   <p id="address">Taipei, Taiwan</p>
@@ -130,8 +159,4 @@
   <!-- CV中，則會詳細的列舉出個人的經驗與相關技能，尤其是個人的學術背景，如：教學經驗、研究成果、獲獎紀錄、相關出版物⋯⋯等細節 -->
   <p></p>
 </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 8ab9e5b57e809301c214ba91c09d58a3852ae3f2
