--- a/resume.html
+++ b/resume.html
@@ -21,15 +21,15 @@
     <p id="email"><i class="fas fa-envelope"></i> m0331005@gm.ncue.edu.tw</p>
     <p id="phone"><i class="fas fa-phone-square"></i> +886986135798</p>
     <p id="address"><i class="fas fa-map-marker-alt"></i> Taipei, Taiwan</p>
-    <p id="website"><i class="fas fa-globe-asia"></i> https://sites.google.com/view/riverside-intro/</p>
+    <p id="website"><i class="fas fa-globe-asia"></i> https://river911009.github.io/</p>
   </div>
   <div id="skill">
     <h1>Skills</h1>
     <ul id="skill">
       <li>Develop and Evaluate Electronics</li>
-      <li>Design Embedded Systems and IoTs</li>
-      <li>Full Stack Application</li>
       <li>Signal analysis and Process</li>
+      <li>Full Stack Application</li>
+      <li>Design Embedded Systems and IoTs</li>
       <li>Develop 3D model and Operate CNC machine</li>
       <p>coding: VB, C/C++, JAVA; firmware: 8051, Arduino, ARM</p>
       <p>PCB: PCB layout, PCB manufacturing process, cnc milling, UV mask & chemical milling, circuit repair</p>
@@ -42,9 +42,9 @@
     <h1>Experience</h1>
     <ul id="exerience">
       <li>
-        <p id="time">Jul 2018-PRESENT</p>
-        <p id="corp">IT Teacher</p>
-        <p id="comp">Shih Yu high school, New Taipei City</p>
+        <p id="time">Jul 2018-<span>PRESENT</span></p>
+        <p id="position">IT Teacher</p>
+        <p id="company">Shih Yu high school, New Taipei City</p>
         <ul>
           <li>Developd students' computer and technology skills through demonstrations and practice.</li>
           <li>Enhanced student skill of robotic technology by teaching STEM robot group.</li>
@@ -54,8 +54,8 @@
       </li>
       <li>
         <p id="time">Aug 2016-Jan 2017</p>
-        <p id="corp">Electronic Intern Teacher</p>
-        <p id="comp">Yang Mei high school</p>
+        <p id="position">Electronic Intern Teacher</p>
+        <p id="company">Yang Mei high school, Taoyuan City</p>
         <ul>
           <li>Trained student and got no.8 on 2016 semester of national school skill competition of computer maintenance.</li>
           <li>Supported and join Wetland Conservation Class</li>
@@ -64,15 +64,19 @@
       </li>
       <li>
         <p id="time">Oct 2015-Jan 2016</p>
-        <p id="corp">Mathematic and Reading Teacher</p>
-        <p id="comp">BOYO Social Welfare Foundation</p>
-        <p>Teaching mathematic and reading to junior high school students.</p>
+        <p id="position">Mathematic and Reading Teacher</p>
+        <p id="company">BOYO Social Welfare Foundation, Changhua City</p>
+        <ul>
+          <li>Teaching mathematic and reading to junior high school students.</li>
+        </ul>
       </li>
       <li>
         <p id="time">Oct 2012-Jun 2013</p>
-        <p id="corp">Volunteer of Counsel Centre</p>
-        <p id="comp">National Changhua University of Education</p>
-        <p>Lectures helping, Psychological test</p>
+        <p id="position">Volunteer of Counsel Centre</p>
+        <p id="company">National Changhua University of Education</p>
+        <ul>
+          <li>Lectures helping, Psychological test</li>
+        </ul>
       </li>
       <li>
         <p id="time">Jul 2013-Aug 2013</p>
@@ -91,7 +95,7 @@
       </li>
       <li>
         <p id="time">Feb 2015</p>
-        <p id="degree">Elementary Level</p>
+        <p id="degree">Elementary Level 4A</p>
         <p id="university">Melbourne Impact English College</p>
       </li>
       <li>
