--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Nav -->
 	<nav id="navbar">
 		<ul>
-			<li class="resume"><a href="_index.html">RESUME</a></li>
+			<li class="resume"><a href="./_index.html">RESUME</a></li>
 			<li class="license">LICENSE</li>
 			<li class="thesis">THESIS</li>
 			<li class="project">PROJECT</li>
