--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	<link rel="stylesheet" href="/source/css/main.css"/>
 
   <link rel="stylesheet" href="/assets/css/main.css"/>
+  <link rel="manifest" href="/manifest.json">
 </head>
-<body class="is-preload">
+<body class="fullscreen"><!--class="is-preload"-->
 
 
 
@@ -462,6 +463,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
-
+  <script type="text/javascript">
+  window.onload = () => {
+    'use strict';
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./sw.js');
+    }
+  }
+  </script>
 </body>
 </html>
