clean page in new branch, to check mobile first tags in <head>.

--- a/index.html
+++ b/index.html
@@ -8,23 +8,45 @@
 	<link rel="icon" type="image/png" href="/source/image/favicon_32x32.png"/>
 	<link rel="apple-touch-icon" type="image/png" href="/source/image/favicon_144x144.png"/>
 
-	<link rel="stylesheet" href="source/css/main.css"/>
+	<link rel="stylesheet" href="source/style/main.css"/>
 </head>
 <body class="fullscreen">
-
-	<!-- Nav start -->
+	<!-- Cover -->
+	<section class="cover">
+		<h1>Riverside</h1>
+		<p>Here is Riverside where you well find informations about Rivière.</p>
+	</section>
+	<!-- Nav -->
 
   <!-- Header -->
 
-  <!-- One -->
-
-	<!-- Two -->
-
-  <!-- Three -->
-
-  <!-- Four -->
-
+  <!-- About -->
+	<section class="about">
+		<h1>Rivière</h1>
+		<p>Nice to see you here! I am Rivière.</p>
+	</section>
+  <!-- Contact -->
+  <section class="contact">
+    <h1>Message</h1>
+    <p>Leave a message</p>
+    <form class="" action="" method="post">
+      <table>
+        <tr>
+          <th>TH1</th>
+          <th>TH2</th>
+        </tr>
+        <tr>
+          <td>TD1</td>
+          <td>TD2</td>
+        </tr>
+      </table>
+    </form>
+  </section>
   <!-- Footer -->
+	<section class="footer">
+		<h1>Footer</h1>
+		<p>info</p>
+	</section>
 
   <!-- Scripts -->
 </body>
